fix: Stop scroll on sidebar which causes overflow

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -15,6 +15,9 @@ $card-width: 500px;
 $card-border-radius: 12px;
 $card-text-color: white;
 
+$sidebar-width-expanded: 200px;
+$sidebar-width-collapsed: 85px;
+
 // FROM CAYMAN THEME
 // Breakpoints
 $large-breakpoint: 64em !default;
