--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -25,6 +25,7 @@ html, body {
   flex-direction: column;
   margin: 0;
   padding: 0;
+  overflow: hidden;
 
   .btn {
     &.btn-dark {
