--- a/assets/css/components/navigation.scss
+++ b/assets/css/components/navigation.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   position: relative;
-  width: 200px;
+  width: $sidebar-width-expanded;
 
   transition: 0.5s;
 
@@ -77,7 +77,7 @@
     width: 100%;
     justify-content: start;
     align-items: center;
-    
+
     #nav-sidebar-social-links-container {
       display: flex;
       width: 65%;
@@ -93,7 +93,7 @@
   }
 
   @media screen and (max-width: 800px) {
-    width: 85px;
+    width: $sidebar-width-collapsed;
 
     #nav-sidebar-controls {
       #openbtn {
